--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
     <!-- Header-->
@@ -27,7 +27,7 @@
         <div class="row gx-4">
           <div class="col-2">
             <a href="/">
-              <img src="img/logo.png" alt="Objetos Antigos" class="img-fluid" />
+              <img src="/logo.png" alt="Objetos Antigos" class="img-fluid" />
             </a>
           </div>
           <div class="col-6">
